--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "mansoorehmontazerin/mansoorehmontazerin.github.io"
 author:
   # Biographic information
   avatar           : "photo.png"
-  name             : "Your Sidebar Name"
+  name             :
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Los Angeles, California"
