--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "mansoorehmontazerin/mansoorehmontazerin.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "photo.png"
+  avatar           : "Img.jpeg"
   name             :
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
