--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,7 @@ kramdown:
 collections:
   teaching:
     output: false
-    permalink: /:collection/:path/
+    permalink:
   publications:
     output: false
     permalink: /:collection/:path/
